templates/saberkan-ruby-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ruby
    app.kubernetes.io/component: ruby
    app.kubernetes.io/instance: ruby
    app.kubernetes.io/name: ruby
    app.kubernetes.io/part-of: ruby-app
    app.openshift.io/runtime: ruby
    app.openshift.io/runtime-version: "2.5"
  name: ruby
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: ruby
    deploymentconfig: ruby
  sessionAffinity: None
  type: ClusterIP
