templates/saberkan-ruby-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ruby
    app.kubernetes.io/component: ruby
    app.kubernetes.io/instance: ruby
    app.kubernetes.io/name: ruby
    app.kubernetes.io/part-of: ruby-app
    app.openshift.io/runtime: ruby
    app.openshift.io/runtime-version: "2.5"
  name: ruby
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ruby
    weight: 100
  wildcardPolicy: None
